doc: Fix mobile navbar collapse
Closes #1023.

--- a/packages/docs/src/app/globals.css
+++ b/packages/docs/src/app/globals.css
@@ -121,6 +121,11 @@
       padding-block: 1rem;
     }
   }
+
+  /* Fix the mobile top navbar collapsing */
+  #nd-subnav {
+    flex-shrink: 0;
+  }
 }
 
 @layer components {
